chainsaw/ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test
  labels:
    app: ingress-test
spec:
  selector:
    app: ingress-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
